--- a/sys_web/.settings/org.eclipse.wst.common.component
+++ b/sys_web/.settings/org.eclipse.wst.common.component
@@ -4,19 +4,19 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <dependent-module archiveName="sys_exception.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/sys_exception/sys_exception">
+        <dependent-module archiveName="sys_service-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/sys_service/sys_service">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="sys_domain.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/sys_domain/sys_domain">
+        <dependent-module archiveName="sys_dao-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/sys_dao/sys_dao">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="sys_service.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/sys_service/sys_service">
+        <dependent-module archiveName="sys_utils-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/sys_utils/sys_utils">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="sys_dao.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/sys_dao/sys_dao">
+        <dependent-module archiveName="sys_domain-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/sys_domain/sys_domain">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="sys_utils.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/sys_utils/sys_utils">
+        <dependent-module archiveName="sys_exception-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/sys_exception/sys_exception">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="context-root" value="sys_parent"/>
